Added migrations and generated jooq code. Added NullAway gradle plugin to projects.

--- a/app/src/main/resources/app-config.yaml
+++ b/app/src/main/resources/app-config.yaml
@@ -14,5 +14,5 @@ jooq:
   sqlMigrationFilesLocation: "lib/src/main/resources/db/migration/*.sql"
 
 flyway:
-  runMigration: false
+  runMigration: true
   locations: "filesystem:lib/src/main/resources/db/migration"
