--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-vertx = "4.3.7"
+vertx = "4.3.8"
 jackson-databind = "2.0.1"
 junit-jupiter = "5.9.2"
 assertj-core = "3.24.2"
@@ -18,6 +18,7 @@ vertx-deepchain = { module = "io.vertx:vertx-stack-depchain", version.ref = "ver
 vertx-web = { module = "io.vertx:vertx-web", version.ref = "vertx" }
 vertx-config = { module = "io.vertx:vertx-config", version.ref = "vertx" }
 vertx-config-yaml = { module = "io.vertx:vertx-config-yaml", version.ref = "vertx" }
+vertx-pg-client = {module ="io.vertx:vertx-pg-client", version.ref = "vertx"}
 vertx-junit5 = { module = "io.vertx:vertx-junit5", version.ref = "vertx" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson-databind" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
